[package]
name = "marks"
version = "0.1.0"
authors = ["Taisuke Miyazaki <imishinist@gmail.com>"]
edition = "2021"
description = "line marking cli tool"

[dependencies]
termcolor = "1.0.4"
regex = "1.1.6"
lazy_static = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
sha2 = "0.10.8"
anyhow = "1.0.82"
thiserror = "1.0.59"
once_cell = "1.19.0"
